<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--Emergency Call-->
    <ImageView
        android:id="@+id/img_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/emergency_head"
        android:layout_width="182dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/img_emergency"
        android:text="@string/emergency_head"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emergency_Info"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_below="@+id/emergency_head"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/img_emergency"
        android:text="@string/emergency_info" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/img_emergency"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent" />

    <!--Notes-->
    <ImageView
        android:id="@+id/img_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_emergency"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/notes_head"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_below="@+id/divider1"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/img_notes"
        android:text="@string/notes_head"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notes_info"
        android:layout_width="172dp"
        android:layout_height="52dp"
        android:layout_below="@+id/notes_head"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="40dp"
        android:layout_toEndOf="@+id/img_notes"
        android:text="@string/notes_info" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/img_notes"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent" />

    <androidx.cardview.widget.CardView
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        app:cardElevation="5dp"
        android:background="@color/colorAccent"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_reports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/reports_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_toEndOf="@+id/img_reports"
                android:text="@string/reports_head"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reports_info"
                android:layout_width="172dp"
                android:layout_height="52dp"
                android:layout_below="@+id/reports_head"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="35dp"
                android:layout_marginTop="14dp"
                android:layout_toEndOf="@+id/img_reports"
                android:text="@string/notes_info" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>