<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorPrimaryLight"
    android:id="@+id/home_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--Emergency Call-->
                    <ImageView
                        android:id="@+id/img_emergency"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#E6E6E6"
                        android:contentDescription="@string/emergency_head"
                        android:src="@drawable/ic_emergency_call" />

                    <TextView
                        android:id="@+id/emergency_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/img_emergency"
                        android:fontFamily="@font/intro_script"
                        android:maxLines="2"
                        android:paddingTop="7dp"
                        android:paddingEnd="3dp"
                        android:text="@string/emergency_head"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emergency_Info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emergency_head"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/img_emergency"
                        android:maxLines="2"
                        android:text="@string/emergency_info" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MainActivity">

                    <!--Notes-->
                    <ImageView
                        android:id="@+id/img_notes"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_alignParentStart="true"
                        android:background="#E6E6E6"
                        android:contentDescription="@string/notes_head"
                        android:src="@drawable/ic_add_notes" />

                    <TextView
                        android:id="@+id/notes_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_toEndOf="@+id/img_notes"
                        android:fontFamily="@font/intro_script"
                        android:paddingTop="7dp"
                        android:paddingEnd="5dp"
                        android:text="@string/notes_head"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/notes_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/notes_head"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/img_notes"
                        android:maxLines="2"
                        android:text="@string/notes_info" />

                    <!--<View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/img_notes"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent" />-->

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_reminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_reminders"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#E6E6E6"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_reminders" />

                    <TextView
                        android:id="@+id/reminders_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/img_reminders"
                        android:fontFamily="@font/intro_script"
                        android:paddingTop="7dp"
                        android:text="@string/reminders_head"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reminders_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reminders_head"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/img_reminders"
                        android:lines="4"
                        android:text="@string/reminders_info" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MainActivity">

                    <ImageView
                        android:id="@+id/img_reports"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#E6E6E6"
                        android:contentDescription="@string/reports_head"
                        android:src="@drawable/ic_reports" />

                    <TextView
                        android:id="@+id/reports_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/img_reports"
                        android:fontFamily="@font/intro_script"
                        android:paddingTop="7dp"
                        android:text="@string/reports_head"
                        android:textColor="#000000"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reports_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/reports_head"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toEndOf="@+id/img_reports"
                        android:text="@string/reports_info" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorAccent"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_marginBottom="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/img_ads"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#E6E6E6"
                android:contentDescription="@string/ads_head"
                android:src="@drawable/ic_reports" />

            <TextView
                android:id="@+id/ads_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/img_ads"
                android:fontFamily="@font/intro_script"
                android:paddingTop="7dp"
                android:text="@string/ads_head"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ads_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ads_head"
                android:layout_marginStart="16dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@+id/img_ads"
                android:text="@string/ads_head" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>